5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1595_2895.log
== TEST (2019-03-26 16:38:22) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:44) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

var = 
-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:04) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:18) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:31) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:52) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:00) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:42) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
print = ()
var = float(input("Qual o valor unitário de cada jogo?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:57) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:03) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:14) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:16) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:21) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:48:21) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))

-- ERROR:
File "XXXX", line 5
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:13) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
total = 
print (total)
-- ERROR:
File "XXXX", line 4
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:22) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
total = 
print (total)
-- ERROR:
File "XXXX", line 4
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:31) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:56) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:12) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:49) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
total = var*var+var
print (total)
-- OUTPUT:
6162.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:16) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
total = var*+var
print (total)
-- OUTPUT:
6084.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:25) 
-- CODE:
var = int(input("Qual a quantidade de jogos a serem encomendados?"))
var = float(input("Qual o valor unitário de cada jogo?"))
var = float(input("Qual o valor do frete?"))
total = var*+var
print (total)
-- OUTPUT:
6084.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:01) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitário de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*+var3
print (total)
-- OUTPUT:
936.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:10) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitário de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*+var3
print (total)
-- OUTPUT:
936.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:36) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitário de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*var2+var3
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:43) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitário de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*var2+var3
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:57) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitário de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*var2+var3
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:17) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitario de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*var2+var3
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:40) 
-- CODE:
var1 = int(input("Qual a quantidade de jogos a serem encomendados?"))
var2 = float(input("Qual o valor unitario de cada jogo?"))
var3 = float(input("Qual o valor do frete?"))
total = var1*var2+var3
print (total)
-- EXECUTION TIME:
0.117153
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
